--- a/data/nlu/nlu.yml
+++ b/data/nlu/nlu.yml
@@ -5,8 +5,8 @@ nlu:
     - are you a bot?
     - am i speaking to an ai?
     - are you a human or a bot?
-    - are you real? 
-    - are you virtual? 
+    - are you real?
+    - are you virtual?
     - are you an ai?
     - aren't you a bot
     - are you a chatbot
@@ -137,481 +137,14 @@ nlu:
     - Wait, I'll have to check my balance first. Can you do that please?
     - Hi, I need to know how much money is in my [checking](account_type) account
     - Balance please
-# - intent: check_earnings
-#   examples: |
-#     - How much money went into my account last month?
-#     - How much money did I make last year?
-#     - What did I earn last month?
-#     - How much did I make last month?
-#     - How much money did I make last week?
-#     - how much was deposited in my account last month?
-#     - how much was deposited in my account in the last two weeks?
-#     - check deposits for last week
-#     - total deposits over last year
-#     - how much was deposited in January
-#     - how much money have I earned?
-#     - what did I earn?
-#     - How much have i earned?
-#     - how much did I make
-#     - am I rich yet?
-#     - am I a millionaire
-#     - how much cash is rolling through my account
-#     - how much money is in the money making machine account?
-#     - what did I make in the last year?
-#     - show me how much I've earned in the last week
-#     - can i afford to go on vacation
-#     - rent is due soon how much do I have in my account
-# - intent: deny
-#   examples: |
-#     - not really
-#     - no
-#     - I don't think so
-#     - never
-#     - no way
-#     - nope
-#     - no thanks
-#     - I dunno
-#     - Nothing!
-#     - nevermind
-#     - n
-#     - i decline
-#     - i don not like this
-#     - i don't think so
-#     - i don't want either of those
-#     - i don't want to
-#     - i don't want to give you my email
-#     - i dont want to
-#     - i dont want to accept :P lol
-#     - i guess it means - no
-#     - i'm afraid not
-#     - i'm not sure
-# - intent: goodbye
-#   examples: |
-#     - see you later
-#     - goodbye
-#     - i'm done
-#     - quit
-#     - stop
-#     - bye
-#     - Adios
-#     - BYEE
-#     - GOODBYE
-#     - Thanks a lot. See ya later
-#     - have a good day. time to go, bye
-#     - bye bye
-#     - ok i gtg
-#     - bye bye bot
-#     - bye for now
-#     - bye udo
-#     - bye was nice talking to you
-#     - bye!
-#     - byee
-#     - catch you later
-#     - ciao
-#     - cya
-#     - farewell
-#     - good bye
-#     - good bye rasa bot!
-#     - good night
-#     - goodbye
-#     - goodbye.
-#     - goodnight
-#     - gotta go
-# - intent: greet
-#   examples: |
-#     - yo
-#     - good morning
-#     - hi
-#     - hey there
-#     - hey
-#     - good evening
-#     - hello
-#     - Hello?
-#     - HEY
-#     - hello are you still there
-#     - hallo
-#     - HI
-#     - Hey
-#     - Hi
-#     - hi!
-#     - hello there
-#     - hi there
-#     - Hello
-#     - hello its ella
-#     - Hola.
-#     - welcome
-#     - howdy
-#     - good day
-# - intent: inform
-#   examples: |
-#     - $10
-#     - 5000
-#     - 500
-#     - $100
-#     - $500
-#     - 100 dollars
-#     - 1000 dollars
-#     - tomorrow
-#     - next week
-#     - yesterday
-#     - for today
-#     - last week
-#     - the past month
-#     - the past two days
-#     - the last two weeks
-#     - at [amazon](vendor_name)
-#     - [starbucks](vendor_name)
-#     - at [target](vendor_name)
-#     - at [starbucks](vendor_name)
-#     - [target](vendor_name)
-#     - [Amazon](vendor_name)
-#     - [Starbucks](vendor_name)
-#     - [Target](vendor_name)
-#     - I want to pay the [current balance](amount-of-money)
-#     - [current balance](amount-of-money)
-#     - [full](amount-of-money)
-#     - in [full](amount-of-money)
-#     - the [full balance](amount-of-money)
-#     - [minimum balance](amount-of-money)
-#     - I want to pay the [minimum balance](amount-of-money)
-#     - the [current balance](amount-of-money)
-#     - the [minimum balance](amount-of-money)
-#     - my [minimum balance](amount-of-money)
-#     - my [current balance](amount-of-money)
-#     - [emblem](credit_card) [card](account_type)
-#     - all [cards](account_type)
-#     - [iron bank](credit_card) [card](account_type)
-#     - [justice bank](credit_card) [card](account_type)
-#     - [emblem](credit_card)
-#     - [iron bank](credit_card)
-#     - [justice bank](credit_card)
-#     - [emblem](credit_card) account
-#     - [iron bank](credit_card) account
-#     - [justice bank](credit_card) account
-#     - [emblem](credit_card) [credit card](account_type)
-#     - [iron bank](credit_card) [credit card](account_type)
-#     - [justice bank](credit_card) [credit card](account_type)
-#     - my [emblem](credit_card) [credit card](account_type)
-#     - my [iron bank](credit_card) [credit card](account_type)
-#     - my [justice bank](credit_card) [credit card](account_type)
-#     - my [emblem](credit_card) [card](account_type)
-#     - my [iron bank](credit_card) [card](account_type)
-#     - my [justice bank](credit_card) [card](account_type)
-#     - towards my [emblem](credit_card) [card](account_type)
-#     - towards my [iron bank](credit_card) [card](account_type)
-#     - towards my [justice bank](credit_card) [card](account_type)
-#     - for sunday
-#     - for friday
-#     - for tomorrow
-#     - for saturday
-#     - I want to pay the [minimum balance](amount-of-money) on my [emblem](credit_card) [credit card](account_type) today
-#     - today
-#     - Please schedule it for the first of next month
-#     - a hundred dollars
-#     - [mastercard](credit_card)
-#     - [visa](credit_card)
-#     - [american express](credit_card)
-#     - my [rasa](credit_card) account
-#     - my [credit card]{"entity": "account_type", "value": "credit"} account ending in 4321
-#     - My [Visa](credit_card) account
-#     - A friend.
-#     - [Alexandra](PERSON)?
-#     - today please
-#     - [Iron Bank](credit_card)
-#     - My [visa](credit_card)
-#     - [Bob](PERSON)
-#     - [bill](PERSON)
-#     - [anusha](PERSON)
-#     - [John](PERSON)
-#     - [gary](PERSON)
-#     - [Claire](PERSON)
-#     - [Imani](PERSON)
-#     - [darnell](PERSON)
-#     - [Guangchen](PERSON)
-#     - [cheng](PERSON)
-#     - to my [brother](PERSON)
-#     - to my [sister](PERSON)
-#     - my [dad](PERSON)
-#     - William Baker
-#     - Evan Oslo
-#     - Lisa Macintyre
-#     - Karen Lancaster
-#     - Percy Donald
-#     - Kyle Gardner
-#     - Katy Parrow
-#     - Percy please
-#     - Laura Schilling
-#     - In that case, let's go with Percy
-#     - My chase
-#     - Jane
-#     - Melinda
-#     - Sara
-#     - my wife's
-#     - Andreas
-#     - htthis weekend
-#     - all of them
-#     - Darren Smith
-#     - Percy
-#     - percy donald
-#     - danIelle smilanich
-#     - [Gringtos](credit_card)
-# - intent: pay_cc
-#   examples: |
-#     - I would like to pay the [minimum balance](amount-of-money) on my [embelm](credit_card) [card](account_type)
-#     - I want to pay my [credit card](account_type)
-#     - I want to pay my [card](account_type)
-#     - Pay my [card](account_type)
-#     - I want to pay my [justice bank](credit_card) bill
-#     - Pay my [discover](credit_card)
-#     - I want to pay my [iron bank](credit_card) bill
-#     - Pay my [visa](credit_card)
-#     - I want to pay my [visa](credit_card) bill
-#     - Pay my [mastercard](credit_card)
-#     - I want to pay my [MasterCard](credit_card) bill
-#     - I want to pay my [credit card](account_type) bill
-#     - I want to pay the [current balance](amount-of-money) on my [credit card](account_type)
-#     - can you help me pay the [current balance](amount-of-money) on my [credit card](account_type)
-#     - i want to pay off my [credit card](account_type)
-#     - I want to pay off my [credit card](account_type)
-#     - i want to pay my [credit card](account_type)
-#     - i want to pay off my [emblem](credit_card) [credit card](account_type)
-#     - I want to pay my [current balance](amount-of-money) on my [embelm](credit_card) [credit card](account_type)
-#     - i want to pay my [current balance](amount-of-money) on my [emblem](credit_card) [credit card](account_type)
-#     - I want to pay $500 on my [emblem](credit_card) [credit card](account_type) on Sunday
-#     - I want to pay my [current balance](amount-of-money) on my [emblem](credit_card) [credit card](account_type) today
-#     - i need to pay off my [emblm](credit_card) [credit card](account_type)
-#     - Please schedule  a payment towards my [credit card](account_type) for April 12th
-#     - Can I schedule a payment towards my [credit card](account_type) for tomorrow?
-#     - Pay off my [minimum balance](amount-of-money) please
-#     - i would like to pay $1200 to my [credit card]{"entity": "account_type", "value": "credit"}
-#     - I would also like to pay my [visa](credit_card) bill
-#     - Pay off my [credit card]{"entity": "account_type", "value": "credit"}, please
-#     - I guess it is. Since it's so much, let's pay off my [credit](account_type)
-#     - Let's pay that [credit card]{"entity": "account_type", "value": "credit"} bill
-#     - I want to pay 100 dollars toward my [Emblem](credit_card) [card](account_type), tomorrow
-#     - pay 100 towards [emblem](credit_card) [card](account_type), tomorrow
-#     - id like to pay my bill
-#     - could I pay off my [credit card]{"entity": "account_type", "value": "credit"}?
-#     - pay off my [credit card]{"entity": "account_type", "value": "credit"}
-#     - i wanna pay my [credit card]{"entity": "account_type", "value": "credit"}
-#     - pay a bill
-#     - can I pay my [card]{"entity": "account_type", "value": "credit"}?
-# - intent: search_transactions
-#   examples: |
-#     - how much did I spend at [Target](vendor_name) this week?
-#     - what is my typical spending at [Amazon](vendor_name)?
-#     - I want to check my spending history
-#     - how much did I spend at [Starbucks](vendor_name) last week?
-#     - I need to check my spending history
-#     - I want to check my spending
-#     - I want to check my spending history at [starbucks](vendor_name)
-#     - i want to check my spending history
-#     - i want to see my transaction history
-#     - I want to search my past transactions
-#     - can I search my transaction history
-#     - can I look at past transactions
-#     - I want to search my transactions with [amazon](vendor_name)
-#     - can i seem my transactions with [target](vendor_name)
-#     - how much did i spend at [starbucks](vendor_name) last month?
-#     - what did i spend last month?
-#     - How much did I spend last month?
-#     - What did I spend at [Legoland](vendor_name) last month?
-#     - What did I spend at [Legoland](vendor_name) last year?
-#     - how much did i spend at [starbucks](vendor_name) last year
-#     - Yes! How much did I spend on [Starbucks](vendor_name) last month?
-#     - How much did I spend at Burger King last month?
-#     - what places have I spent money?
-#     - What did I spend at [Starbucks](vendor_name) in may?
-#     - How much money did I lose to [starbucks](vendor_name) in may?
-#     - Oh how much did I actually spend at [target](vendor_name) last month? I'd love to know.
-#     - Can you tell me how much I spent at [Ikea](vendor_name) this month?
-#     - Can you tell me how much I spent at coffeeshops this month?
-#     - Can you tell me how much I spent on coffee this month?
-#     - What did I spend at [Costco](vendor_name) last month?
-#     - what did I spend at [target](vendor_name) last month
-#     - where did I spend the most money last month?
-# - intent: thankyou
-#   examples: |
-#     - thank you goodbye
-#     - okay thank you goodbye
-#     - thank you bye
-#     - um okay thank you good bye
-#     - thank you
-#     - and thats all thank you and good bye
-#     - okay thank you
-#     - thanks
-#     - thanks goodbye
-#     - thank you and good bye
-#     - Thanks!
-#     - Awesome, you are a good bot!
-#     - great!
-#     - I see, thanks
-#     - Oh thats good!
-#     - it's good :-)
-#     - thnaks
-#     - good job bot
-#     - great
-#     - thanks for the help
-#     - thanks you
-#     - thanks!
-#     - thankyou
-#     - thnks
-#     - thx
-#     - thanks for your information
-#     - thanks f
-# - intent: transfer_money
-#   examples: |
-#     - I want to pay [John](PERSON)
-#     - I want to transfer $100 to [Bob](PERSON)
-#     - can i transfer money to [Sally](PERSON)
-#     - I want to transfer money
-#     - I want to pay someone
-#     - can I pay someone
-#     - I need to transfer money to a friend
-#     - can I transfer money to my [mom](PERSON)
-#     - I want to pay [Bert](PERSON)
-#     - pay my friend
-#     - transfer money
-#     - I want to transfer $100 to [Tommy](PERSON)
-#     - i want to transfer $400 to [Akela](PERSON)
-#     - I want to pay [Paula Handy](PERSON)
-#     - pay Katy Parrow $40 please
-#     - transfer $60 to [Jason Jacob](PERSON)
-#     - pay [Evan Oslo](PERSON)
-#     - pay [Lisa](PERSON) please
-#     - can I transfer money to [Kyle Gardner](PERSON)?
-#     - Pay [Karen](PERSON) 60 Euros
-#     - pay [Mona](PERSON) $60
-#     - transfer $60 to [Sally](PERSON)
-#     - need to transfer money
-#     - II want to transfer to [Kelly](PERSON)
-#     - Pay [Percy](PERSON) $50
-#     - Pay $50 to [Pat](PERSON)
-#     - Ok pay [Emma](PERSON)
-#     - pay [Emanual](PERSON)
-#     - i want to transfer $100 to [Jane smith](PERSON)
-#     - i want to transfer $100 to my [daughter](PERSON)
-#     - i want to transfer money please
-#     - i mean i want to transfer money
-#     - I need to pay a friend.
-#     - transfer money to [ethan oswald](PERSON)
-#     - transfer money to [sara](PERSON)
-#     - I need to transfer money to my grandma [Judith](PERSON).
-#     - i want to transfer money to [Latisha](PERSON)
-#     - I need to make an urgent transfer to [Bob](PERSON), can you do it?
-#     - Ahh, okay so I want to make a transfer to [Bob](PERSON).
-#     - Can I transfer money to a friend?
-#     - I need to transfer money to [Jeff](PERSON), my son
-#     - I need to send money to my kid
-#     - I need to transfer money
-#     - send $50 to [john jacob](PERSON)
-#     - I need to transfer money to my co-worker who paid for lunch
-#     - Hi I like to send money
-#     - I'd like to send 50$ to [John](PERSON)
-#     - Hi I like to send money to [John](PERSON)
-#     - Please transfer 50 dollars to [Andreas](PERSON)
-#     - I would like to transfer money to [Philipp](PERSON)
-#     - I would like to transfer 50$ to [Joschka](PERSON)
-# - intent: check_recipients
-#   examples: |
-#     - Who can I send money to?
-#     - Who are my known recipients
-#     - Show me my list of recipients
-#     - Show the recipient list
-#     - Show me people I can send money to
-#     - Who is a valid payee
-#     - who can I pay?
-#     - who can I transfer money?
-#     - who's in my recipient list?
-#     - who can I transfer money to?
-#     - Who is on your list?
-#     - who is in my list of kown recipients?
-#     - Who all can I transfer money to?
-#     - Who can I transfer money to?
-#     - Okay. Who can I transfer money to then?
-#     - can I see the list of known recipients?
-#     - tell me who I can share my money with
-#     - whats my recipient list
-#     - can I send money to anyone?
-#     - who exactly am I able to send money to
-#     - if I want to transfer money can i send it to anyone
-#     - show me my money sending list
-# - intent: help
-#   examples: |
-#     - help
-#     - what can you do?
-#     - what can I ask you?
-#     - what do you do?
-#     - what can you help me with?
-#     - help me
-#     - help, what do you do
-#     - how do I use this
-#     - how can you help me
-#     - What are the things that you can do?
-#     - What else can you help me with?
-#     - can you do anything else?
-#     - can you help me?
-#     - come back
-#     - cool! can I do something else here?
-#     - hello what can you do for me
-#     - help
-#     - help me
-#     - help please
-#     - help pls
-#     - help?
-#     - hep me
-# - intent: human_handoff
-#   examples: |
-#     - handoff
-#     - operator
-#     - I want a human
-#     - can I speak to an agent
-#     - real agent please
-#     - real human
-#     - chat with a live agent
-#     - give me a person please
-#     - i want to talk to a human
-#     - transfer to a human
-#     - Please give me to a human
-#     - can I talk to human?
-#     - can I talk to human
-#     - talk to human
-#     - i want human :(
-#     - can i talk to human
-#     - i want to talk to a human
-#     - i want to speak to human
-#     - can i talk to a real person?
-#     - connect me to a real person
-#     - I need a real person
-#     - can i took with a real person
-#     - let me speak to a real person
-#     - let me speak to a real person please
-#     - i want to talk to a real person
-# - intent: out_of_scope
-#   examples: |
-#     - what is the square root of 5
-#     - I want to know the weather
-#     - what is the meaning of life.
-#     - Fridge Isn't Running
-#     - my tv isn't working
-#     - I want a pizza
-#     - my washing machine isn't working
-#     - what year is it
-#     - order a pizza
-#     - I want to order a pizza
-#     - what is the weather today
-#     - what is the weather
-#     - what the weather today ?
-#     - hows the weather
-#     - tell me a joke
-#     - Can I get a hamburger?
-#     - Can YouTube talk?
-#     - Can you call me back ?
-#     - Can you give me your datacenter's password
-#     - Can you give me your datacenter's password?
-#     - Can you make sandwiches?
-#     - Can you please send me an uber
-#     - ofif fsdfafsfs
+- intent: out_of_scope
+  examples: |
+    - book a flight to Amsterdam
+    - what is the weather tomorrow?
+    - what is the square root of 2?
+    - what is the meaning of life?
+    - I would like to order a pizza
+    - I want a pizza
 - synonym: credit
   examples: |
     - credit card
