--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
 	"settings": {},
 	
 	// Add the IDs of extensions you want installed when the container is created.
-	"extensions": ["ms-python.python", "redhat.vscode-yaml"]
+	"extensions": ["ms-python.python", "redhat.vscode-yaml", "eamodio.gitlens", "github.vscode-pull-request-github"]
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
