--- a/data/nlu/nlu.yml
+++ b/data/nlu/nlu.yml
@@ -137,6 +137,119 @@ nlu:
     - Wait, I'll have to check my balance first. Can you do that please?
     - Hi, I need to know how much money is in my [checking](account_type) account
     - Balance please
+- intent: inform
+  examples: |
+    - $10
+    - 5000
+    - 500
+    - $100
+    - $500
+    - 100 dollars
+    - 1000 dollars
+    - tomorrow
+    - next week
+    - yesterday
+    - for today
+    - last week
+    - the past month
+    - the past two days
+    - the last two weeks
+    - at [amazon](vendor_name)
+    - [starbucks](vendor_name)
+    - at [target](vendor_name)
+    - at [starbucks](vendor_name)
+    - [target](vendor_name)
+    - [Amazon](vendor_name)
+    - [Starbucks](vendor_name)
+    - [Target](vendor_name)
+    - I want to pay the [current balance](amount-of-money)
+    - [current balance](amount-of-money)
+    - [full](amount-of-money)
+    - in [full](amount-of-money)
+    - the [full balance](amount-of-money)
+    - [minimum balance](amount-of-money)
+    - I want to pay the [minimum balance](amount-of-money)
+    - the [current balance](amount-of-money)
+    - the [minimum balance](amount-of-money)
+    - my [minimum balance](amount-of-money)
+    - my [current balance](amount-of-money)
+    - [emblem](credit_card) [card](account_type)
+    - all [cards](account_type)
+    - [iron bank](credit_card) [card](account_type)
+    - [justice bank](credit_card) [card](account_type)
+    - [emblem](credit_card)
+    - [iron bank](credit_card)
+    - [justice bank](credit_card)
+    - [emblem](credit_card) account
+    - [iron bank](credit_card) account
+    - [justice bank](credit_card) account
+    - [emblem](credit_card) [credit card](account_type)
+    - [iron bank](credit_card) [credit card](account_type)
+    - [justice bank](credit_card) [credit card](account_type)
+    - my [emblem](credit_card) [credit card](account_type)
+    - my [iron bank](credit_card) [credit card](account_type)
+    - my [justice bank](credit_card) [credit card](account_type)
+    - my [emblem](credit_card) [card](account_type)
+    - my [iron bank](credit_card) [card](account_type)
+    - my [justice bank](credit_card) [card](account_type)
+    - towards my [emblem](credit_card) [card](account_type)
+    - towards my [iron bank](credit_card) [card](account_type)
+    - towards my [justice bank](credit_card) [card](account_type)
+    - for sunday
+    - for friday
+    - for tomorrow
+    - for saturday
+    - I want to pay the [minimum balance](amount-of-money) on my [emblem](credit_card) [credit card](account_type) today
+    - today
+    - Please schedule it for the first of next month
+    - a hundred dollars
+    - [mastercard](credit_card)
+    - [visa](credit_card)
+    - [american express](credit_card)
+    - my [rasa](credit_card) account
+    - my [credit card]{"entity": "account_type", "value": "credit"} account ending in 4321
+    - My [Visa](credit_card) account
+    - A friend.
+    - [Alexandra](PERSON)?
+    - today please
+    - [Iron Bank](credit_card)
+    - My [visa](credit_card)
+    - [Bob](PERSON)
+    - [bill](PERSON)
+    - [anusha](PERSON)
+    - [John](PERSON)
+    - [gary](PERSON)
+    - [Claire](PERSON)
+    - [Imani](PERSON)
+    - [darnell](PERSON)
+    - [Guangchen](PERSON)
+    - [cheng](PERSON)
+    - to my [brother](PERSON)
+    - to my [sister](PERSON)
+    - my [dad](PERSON)
+    - William Baker
+    - Evan Oslo
+    - Lisa Macintyre
+    - Karen Lancaster
+    - Percy Donald
+    - Kyle Gardner
+    - Katy Parrow
+    - Percy please
+    - Laura Schilling
+    - In that case, let's go with Percy
+    - My chase
+    - Jane
+    - Melinda
+    - Sara
+    - my wife's
+    - Andreas
+    - htthis weekend
+    - all of them
+    - Darren Smith
+    - Percy
+    - percy donald
+    - danIelle smilanich
+    - [Gringtos](credit_card)
 - intent: out_of_scope
   examples: |
     - book a flight to Amsterdam
