--- a/data/nlu/nlu.yml
+++ b/data/nlu/nlu.yml
@@ -5,8 +5,8 @@ nlu:
     - are you a bot?
     - am i speaking to an ai?
     - are you a human or a bot?
-    - are you real? 
-    - are you virtual? 
+    - are you real?
+    - are you virtual?
     - are you an ai?
     - aren't you a bot
     - are you a chatbot
@@ -81,6 +81,8 @@ nlu:
     - what is the percentage fee for transactions to another person
     - are there any transaction fees or charges I should know about?
     - tell me about transfer fees
+    - what are the charges
+    - what are the [bank](account_type) charges
 - intent: check_balance
   examples: |
     - How much money is on my account?
