Revert "Deleted bad example"
This reverts commit b11fd6b0a0bd2d574aa4436ba08673faef4bd147.

--- a/data/nlu/nlu.yml
+++ b/data/nlu/nlu.yml
@@ -82,6 +82,7 @@ nlu:
     - are there any transaction fees or charges I should know about?
     - tell me about transfer fees
     - what are the charges
+    - what are the [bank](account_type) charges
 - intent: check_balance
   examples: |
     - How much money is on my account?
